[project]
  name = "pulumi_checkly"
  description = "A Pulumi package for creating and managing Checkly monitoring resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["pulumi", "checkly", "category/monitoring"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "2.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.pulumi.com/registry/packages/checkly"
    Repository = "https://github.com/checkly/pulumi-checkly"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_checkly = ["py.typed", "pulumi-plugin.json"]
